fix bug with ing visibility

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -108,6 +108,8 @@ header h1 {
     width: 50px;
     margin-bottom: 10px;
     transition: transform 0.3s ease, opacity 0.3s ease;
+    opacity: 1 !important;
+    visibility: visible !important;
 }
 
 .social-img:hover {
